test/fails/bad_parsing/extra_semicolons.lgl
void main() {
    skip;;
    print 5;
}
